// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should NOT render "no items" message 1`] = `
<div>
  <ul
    class="mko-grid  mko_4w49wy-grid"
  />
</div>
`;

exports[`should render "no items" message 1`] = `
<div>
  <ul
    class="mko-grid  mko_4w49wy-grid"
  >
    <li
      class="mko-grid__no-items  mko_4w49wy-grid__noItems"
    >
      No items were found.
    </li>
  </ul>
</div>
`;

exports[`should render custom "no items" message 1`] = `
<div>
  <ul
    class="mko-grid  mko_4w49wy-grid"
  >
    <li
      class="mko-grid__no-items  mko_4w49wy-grid__noItems"
    >
      Jest No Items
    </li>
  </ul>
</div>
`;

exports[`should render items using children render props 1`] = `
<div>
  <ul
    class="mko-grid  mko_4w49wy-grid"
  >
    <li>
      jest
    </li>
    <li>
      enzyme
    </li>
    <li>
      react
    </li>
  </ul>
</div>
`;

exports[`should render with minimum props 1`] = `
<div>
  <ul
    class="mko-grid  mko_4w49wy-grid"
  />
</div>
`;
